# vlm_anomaly_reasoning

./: .gitignore  .gitmodules  README.md  pyproject.toml  setup.sh  setup_inverse_dynamics.sh  setup_vllm.sh
.claude/skills/fix-prompt-realism/: SKILL.md
.claude/skills/scenery-variations/: SKILL.md
.githooks/: pre-push
.github/workflows/: lint.yml
data/cosmos3/: cosmos1_reasoning_transformers.py  generate_videos_diffusers.py  generate_videos_vllm.py  prettify_prompts.py  prompt_resolve.py  run_inverse_dynamics.py  text2video_neg_prompt.json  upsample_prompts.sh  upsample_runner.py
data/cosmos3/06_21_video_gen_prompts/negative_scenarios/opus_4.8_upsampled_prompts/: prompt_4.json
data/cosmos3/data_validation/: README.md  app.py  inverse_dynamics_filter.csv  io_utils.py  negative_scenarios_variants_filter.csv  plotting.py  positive_scenarios_variants_filter.csv  prompt_utils.py
data/cosmos3/video_gen_prompts/06_21_video_gen_prompts/positive_scenarios/: updated_human_prompt.txt
data/cosmos3/video_gen_prompts/final_semantic_scenarios/negative_scenarios/: prompt.txt  prompt_2.json  prompt_4.json  prompt_5.json  prompt_8.json  prompt_9.json
data/cosmos3/video_gen_prompts/final_semantic_scenarios/negative_scenarios_variants/: prompt_0_v02.json  prompt_0_v08.json  (+59 more)
data/cosmos3/video_gen_prompts/negative_scenarios/: prompt.txt  prompt_exp.txt  prompt_old.txt
data/cosmos3/video_gen_prompts/positive_scenarios/: prompt.txt
docs/images/: README.md
spec/: plan_ID_validation_app.md  spec_ID_validation_app.md  spec_anomaly_reasoning.md  spec_video_generation.md
(+303 files in other folders)
