[project]
name = "vlm-anomaly-reasoning"
version = "0.1.0"
description = "Cosmos3 video generation + VLM semantic anomaly reasoning for AV scenarios"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "diffusers",
    "accelerate",
    "av",
    "cosmos-guardrail",
    "huggingface-hub",
    "imageio",
    "imageio-ffmpeg",
    "ipykernel",
    "torch",
    "torchvision",
    "transformers",
]

# Build diffusers from git and pull torch/vision from the CUDA 13.0 wheel index for Blackwell GPUs.
[tool.uv.sources]
diffusers = { git = "https://github.com/huggingface/diffusers.git" }
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv]
link-mode = "copy"

# Lint tooling. The pre-push hook runs ruff via `uvx ruff@<version>` (no project
# install needed); this pin documents the version and lets `uv run ruff` work too.
[dependency-groups]
dev = ["ruff==0.15.17"]

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = ["packages"]
